Avoid zooming by double taps on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -44,6 +44,7 @@ body>header {
 }
 
 button {
+  touch-action: none;
   font-family: var(--font);
 }
 
